# aecctx

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent_baseline/: meta_agent_baseline_integration.toml
.agent_baseline/manifests/: specialization_overlay.toml
.agent_baseline/reports/: latest-baseline-integration-report.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-recovery.yml  release.yml
conformance/v0.1/: corpus.json
conformance/v0.2/: claims.json  corpus.json  dwg-corpus.json  dxf-corpus.json  gate-corpus.json  ifc-corpus.json  inference-corpus.json  mesh-corpus.json  plugin-corpus.json  provider-corpus.json  rvt-provider-decision.json  signing-corpus.json  step-iges-corpus.json
conformance/v0.3/: claims.json  corpus.json  dwg-corpus.json  dxf-corpus.json  gate-corpus.json  ifc-corpus.json  local-enforcement-corpus.json  mesh-crs-corpus.json  ocr-corpus.json  ocr-replay-corpus.json  plugin-corpus.json  provider-multiarch-corpus.json  remote-provider-corpus.json  rvt-provider-decision.json  signing-corpus.json  step-iges-corpus.json  vision-corpus.json  vision-replay-corpus.json
docs/: HANDOFF.md  capability-matrix.md  compatibility-v0.2.md  compatibility-v0.3.md  compatibility.md  implementation-plan.md  mcp.md  project-governance.md
docs/decisions/: decision-log.md
docs/evidence/: ACX-01.md  ACX-02.md  ACX-03.md  ACX-04.md  ACX-05.md  ACX-06.md  ACX-07.md  ACX-08.md  ACX-09.md  ACX-11.md  ACX-12.md  ACX-13.md  ACX-14.md  ACX-15.md  ACX-16.md  ACX-17.md  ACX-18.md  ACX-19.md  ACX-20.md  ACX-21.md  ACX-22.md  ACX-23.md  ACX-24.md  ACX-25.md  (+13 more)
fixtures/: README.md
scripts/: build_dwg_provider.sh  build_inspector_distribution.py  build_provider_matrix.sh  build_step_iges_provider.sh  check_codex_plugin.py  check_codex_plugin_conformance.py  check_dwg_v03_conformance.py  check_dxf_v03_conformance.py  check_gate_conformance.py  check_gate_v03_conformance.py  check_hos_adoption_conformance.py  check_ifc_v03_conformance.py  check_inspector_v03_conformance.py  check_local_enforcement_conformance.py  check_mesh_crs_v03_conformance.py  check_meta_agent_baseline_integration.py  check_mission_control_adapter_conformance.py  check_ocr_v03_conformance.py  check_provider_multiarch_conformance.py  check_remote_provider_conformance.py  check_rvt_blocked_conformance.py  check_signing_conformance.py  check_signing_v03_conformance.py  check_spec_contract.py  check_step_iges_v03_conformance.py  check_vision_v03_conformance.py  ocr_v03_live.py  provider_multiarch.py  verify.sh  verify_dwg_provider.sh  verify_portable.sh  verify_provider_matrix.sh  verify_release.sh  verify_step_iges_provider.sh  verify_step_iges_v03_provider.sh  verify_tesseract_provider.sh  vision_v03_live.py
tests/: conftest.py  test_claim_registry.py  test_cli.py  test_codex_plugin.py  test_codex_plugin_conformance.py  test_codex_plugin_v03.py  test_dwg_adapter.py  test_dwg_provider.py  test_dwg_v03.py  test_dxf_adapter.py  test_dxf_v02.py  test_dxf_v03.py  test_external_providers.py  test_gate_checks.py  test_gate_cli.py  test_gate_conformance.py  test_gate_contract.py  test_gate_diff.py  test_gate_ids.py  test_gate_policy.py  test_gate_v03.py  test_geometry_adapter.py  test_geometry_v02.py  test_ifc_adapter.py  test_ifc_v02.py  test_ifc_v03.py  test_inference_v02.py  test_local_provider_profiles.py  test_mcp_server.py  test_mesh_coordinates_v02.py  test_mesh_v03.py  test_ocr_v03.py  test_opaque_ingest.py  test_package_data.py  test_package_io.py  test_pdf_image_adapters.py  test_pdf_image_v02.py  test_plugin_isolation.py  test_provider_multiarch.py  test_provider_multiarch_live.py  (+25 more)
(+617 files in other folders)
