[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aecctx"
version = "0.1.0.dev0"
description = "Deterministic, evidence-preserving AEC context packages"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "AECCTX contributors"}]
dependencies = ["jsonschema[format]>=4.23,<5"]

[project.scripts]
aecctx = "aecctx.cli:main"

[project.optional-dependencies]
test = [
  "build>=1.2,<2",
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aecctx"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/fixtures/minimal-aecctx",
  "/schemas/v0.1",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

