[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aecctx"
version = "0.1.0"
description = "Deterministic, evidence-preserving AEC context packages"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "AECCTX contributors"}]
dependencies = ["jsonschema[format]>=4.23,<5"]
keywords = ["AEC", "BIM", "CAD", "IFC", "DXF", "context-packages"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/mandalorianuy/aecctx"
Issues = "https://github.com/mandalorianuy/aecctx/issues"
Repository = "https://github.com/mandalorianuy/aecctx"

[project.scripts]
aecctx = "aecctx.cli:main"
aecctx-mcp = "aecctx.mcp_server:main"

[project.optional-dependencies]
all = [
  "cryptography>=45,<50",
  "ezdxf==1.4.4",
  "ifcopenshell==0.8.5",
  "mcp>=1.20,<2",
  "Pillow>=12.1,<13",
  "pypdf>=6.6,<7",
  "trimesh>=4.12,<5",
]
dxf = ["ezdxf==1.4.4"]
geometry = ["trimesh>=4.12,<5"]
image = ["Pillow>=12.1,<13"]
ifc = ["ifcopenshell==0.8.5"]
mcp = ["mcp>=1.20,<2"]
pdf = ["pypdf>=6.6,<7", "Pillow>=12.1,<13"]
signing = ["cryptography>=45,<50"]
test = [
  "build>=1.2,<2",
  "cryptography>=45,<50",
  "ezdxf==1.4.4",
  "ifcopenshell==0.8.5",
  "mcp>=1.20,<2",
  "Pillow>=12.1,<13",
  "pypdf>=6.6,<7",
  "trimesh>=4.12,<5",
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aecctx"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/fixtures",
  "/fixtures/v0.2",
  "/conformance/v0.2",
  "/scripts",
  "/docs",
  "/schemas/v0.1",
  "/schemas/v0.2",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
